[project]
name = "comfyui-dragnuwa"
description = "Nodes: Download the weights of DragNUWA [a/drag_nuwa_svd.pth](https://drive.google.com/file/d/1Z4JOley0SJCb35kFF4PCc6N6P1ftfX4i/view) and put it to ComfyUI/models/checkpoints/drag_nuwa_svd.pth\n[w/Due to changes in the torch package and versions of many other packages, it may disrupt your installation environment.]"
version = "1.0.0"
license = "LICENSE"
dependencies = ["black==23.7.0", "chardet==5.1.0", "clip @ git+https://github.com/openai/CLIP.git", "einops>=0.6.1", "fairscale>=0.4.13", "fire>=0.5.0", "fsspec>=2023.6.0", "invisible-watermark>=0.2.0", "kornia==0.6.9", "matplotlib>=3.7.2", "natsort>=8.4.0", "ninja>=1.11.1", "numpy>=1.24.4", "omegaconf>=2.3.0", "open-clip-torch>=2.20.0", "opencv-python==4.6.0.66", "pandas>=2.0.3", "pillow>=9.5.0", "pudb>=2022.1.3", "pytorch-lightning==2.1.0", "pyyaml>=6.0.1", "scipy>=1.10.1", "streamlit>=0.73.1", "tensorboardx==2.6", "timm>=0.9.2", "tokenizers>=0.12.1", "torchdata>=0.6.1", "torchmetrics>=1.0.1", "tqdm>=4.65.0", "urllib3<1.27,>=1.25.4", "wandb>=0.15.6", "webdataset>=0.2.33", "wheel>=0.41.0", "colorlog", "deepdish", "json_lines", "msgpack", "configobj", "psutil", "h5py", "imageio", "tensorboard", "moviepy", "pyyaml", "pandas", "einops"]

[project.urls]
Repository = "https://github.com/chaojie/ComfyUI-DragNUWA"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DragNUWA"
Icon = ""
